# stm32f107_rust_test

./: .gitignore  Cargo.toml  stm32f107.svd.patched
.cargo/: config
src/: main.rs
