[package]
name = "blink"
version = "0.1.0"
authors = ["Torkel Danielsson <torkel@voysys.se>"]
edition = "2018"

[dependencies]
stm32f1 = "0.10.0"
cortex-m-rt = "*"
cortex-m = "*"
nb = "0.1.2"
cortex-m-semihosting = "0.3.3"

[dependencies.stm32f1xx-hal]
path = "../../stm32f1xx-hal"
version = "*"
features = ["rt", "stm32f107", "connectivity"]

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
